# rs-redis-php-client

./: Cargo.toml  README.md  index.php  run-tests.php
src/: client.rs  common.rs  exception.rs  lib.rs  module.rs
tests/: config.inc  constructor.phpt  constructor_exception.phpt  get_value.phpt  get_value_by_null_key.phpt  set.phpt  set_wrong_key.phpt  set_wrong_value.phpt
