[package]
name = "rs-redis-php-client"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
ext-php-rs = { git = "https://github.com/davidcole1340/ext-php-rs", branch = "php_class_attr" }
redis-client = { git = "https://github.com/Norbytus/redis-client/" }
